# GitScribe

./: .gitignore  BUILD.md  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_PROCESS.md  ROADMAP.md
.claude/: settings.local.json
docs/: BRANDING_GUIDELINES.md  CONTEXT_MENU_SPEC.md
gitscribe-core/: CLAUDE.md  Cargo.toml  README.md  build.bat  build.ps1  build.rs  cbindgen.toml  demo.ps1  test.ps1
gitscribe-core/.cargo/: config.toml
gitscribe-core/examples/: status_demo.rs
gitscribe-core/include/: gitscribe_core.h
gitscribe-core/src/: cache.rs  ffi.rs  history.rs  lib.rs  napi.rs  oplog.rs  repository.rs  stash.rs  status.rs  temp_ignore.rs
gitscribe-plugins/: CLAUDE.md  INTEGRATION.md  LICENSE.md  MARKETPLACE.md  README.md
gitscribe-plugins/.claude/: settings.local.json
gitscribe-plugins/api/: marketplace.openapi.yaml
gitscribe-plugins/client/: IconPackDownloader.cpp  IconPackDownloader.h  MarketplaceClient.ts
gitscribe-plugins/examples/conventional-commits/: README.md  index.js  manifest.json
gitscribe-plugins/examples/neon-city-icons/: README.md  manifest.json
gitscribe-plugins/schemas/: icon-pack-manifest.schema.json  marketplace-plugin.schema.json  plugin-manifest.schema.json
gitscribe-shell/: CLAUDE.md  CMakeLists.txt  INSTALL.md  LICENSE.md  README.md  STABILITY_FIXES.md  TESTING.md  TROUBLESHOOTING.md  build-full.ps1  build-status.ps1  check_reg.ps1  rebuild-after-restart.cmd  register-debug.cmd  register.cmd  temp_register.cmd  unregister.cmd
gitscribe-shell/.claude/: settings.local.json
gitscribe-shell/resources/: README.md  generate-placeholder-icons.ps1
gitscribe-shell/resources/icon-packs/: make-transparent.py  packs.json
gitscribe-shell/src/: AppLauncher.cpp  AppLauncher.h  ClassFactory.cpp  ClassFactory.h  ContextMenu.cpp  ContextMenu.h  GitRepository.cpp  GitRepository.h  GitScribeOverlay.cpp  GitScribeOverlay.h  MenuContext.cpp  MenuContext.h  PerformanceCache.cpp  PerformanceCache.h  PerformanceProfiler.h  PropertySheet.cpp  PropertySheet.h  dllmain.cpp  gitscribe-shell.def  gitscribe-shell.rc  resource.h
installer/: License.rtf  Product.wxs  README.md  build.cmd
installer/winget/: README.md
installer/winget/manifests/: KyleDonaldson.GitScribe.Status.installer.yaml  KyleDonaldson.GitScribe.Status.locale.en-US.yaml  KyleDonaldson.GitScribe.Status.yaml
resources/: convert-to-ico.ps1
scripts/: build.ps1  cleanup.ps1  install.ps1  installer.nsi  quick-install.ps1  uninstall.ps1
tools/: convert-svg-to-ico.ps1  create-all-icon-packs.py  create-transparent-icons.ps1  extract-icon-packs.js  fix-special-packs.py
